Fixed Scrollbar Getting Clipped at Bottom

--- a/autoscheduler/frontend/src/components/App/App.css
+++ b/autoscheduler/frontend/src/components/App/App.css
@@ -13,4 +13,5 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
